--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -6,12 +6,12 @@ name: Excavator
 jobs:
   excavate:
     name: Excavator
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@main
     - name: Excavate
-      uses: Ash258/Scoop-GithubActions@stable
+      uses: Ash258/Scoop-GithubActions@stable-win
       env:
         GITH_EMAIL: denisnosach77@gmail.com
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SKIP_UPDATED: '0'
+        SKIP_UPDATED: '1'
